projects/npm-packages-deps-retrieval/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: projects-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "projects-static-ip"
spec:
  rules:
  - host: npm-pdr.lmcaraig.com
    http:
      paths:
      - backend:
          serviceName: app-svc
          servicePort: 80
  - host: api.npm-pdr.lmcaraig.com
    http:
      paths:
      - backend:
          serviceName: api-svc
          servicePort: 80
